New talks. New sponsors.

--- a/en/index.html
+++ b/en/index.html
@@ -800,8 +800,13 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Marcel Duran &amp;&amp; Angus Croll</strong>
-                                            <em class="speak">TBA</em>                                            
+                                            <em class="speak">Performance as a Twitter feature &amp;&amp; Learning to fly - Twitter Flight and mixin</em>                                            
                                         </div>
+                                        <span class="expand ir ico-general">&nbsp;</span>                                            
+                                        <div class="about">
+                                            <p>Web Performance as a feature should be treated accordingly. This talk covers a few ways Web Performance as any other feature in your application should break builds once tests fail.</p>
+                                            <p>When we were asked to design the new JavaScript infrastructure for twitter.com (which evolved into Flight) we were given the opportunity to put into practice some of our favourite techniques. In this talk, Angus will discuss various JavaScript re-use methodologies and explain why we settled on functional mixins.</p>                                                                                        
+                                        </div>                                        
                                     </td>                                   
                                 </tr> 
                                 <tr>
@@ -809,8 +814,12 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Renato Mangini</strong>
-                                            <em class="speak">TBA</em>                                            
+                                            <em class="speak">Where modern front-end tooling has gone</em>
                                         </div>
+                                        <span class="expand ir ico-general">&nbsp;</span>
+                                        <div class="about">
+                                            <p>When you move from demos and samples to a real app in a real company, you need a good set of tools. In special front-end development, with its populated universe of tools, frameworks and libraries. In this talk, we will learn about Yeoman, a gentle English worker that can help you with the ingrate but very important backstage work of connecting and moving the inner gears that allow your app to shine.</p>                                                                                        
+                                        </div>                                        
                                     </td>                                   
                                 </tr>
                                 <tr class="event">
@@ -920,8 +929,12 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Alexandre Gaigalas</strong>
-                                            <em class="speak">TBA</em>                                            
+                                            <em class="speak">API Sex</em>                                            
                                         </div>
+                                        <span class="expand ir ico-general">&nbsp;</span>
+                                        <div class="about">
+                                            <p>How to make a good API? What they eat? How do they reproduce? By treating software as small based APIs creatures, we will see their lineages, how they evolve, how to choose them and what makes them effective.</p>
+                                        </div> 
                                     </td>                                   
                                 </tr>
                                 <tr>
@@ -961,8 +974,14 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Caridy Patino</strong>
-                                            <em class="speak">TBA</em>                                            
+                                            <em class="speak">NodeJS, the good, the bad and the ugly</em>                                            
                                         </div>
+                                        <span class="expand ir ico-general">&nbsp;</span>
+                                        <div class="about">
+                                            <p>NodeJS is one of the hottest technologies nowadays with a thriving community, and since his nature is javascript, the language that everyone knows, but without the limitations of the browsers, it opens a whole new set of opportunities. </p>
+                                            <p>From a web application, to a robot interface, you could build almost anything with it, which is one of the beauties of NodeJS.</p>
+                                            <p>But the fact that you CAN do it does not mean you SHOULD. For NodeJS developers, the biggest challenge is to know the limitations of the platform to avoid falling into some of the common traps, and today we want to discover some of those common issues, and some general guidelines to get the best out of NodeJS in the different scenarios, from a simple CLI tool, up to high-level app frameworks.</p>
+                                        </div>                                        
                                     </td>                                   
                                 </tr>
                                 <tr class="event">
@@ -1099,8 +1118,14 @@
                                     <strong class="sponsor">
                                         <a href="//developers.google.com/chrome/" rel="external" title="visit Google Chrome &mdash; Google Developers" class="sponsors-general">Google</a>    
                                     </strong>                                    
-                                    <p class="about">Google Inc. is an American multinational corporation specializing in Internet-related services and products. These include search, cloud computing, software and online advertising technologies. Most of its profits are derived from AdWords.</p>
-                                </li>                                 
+                                    <p class="about">Chrome is a fast, simple, and secure web browser, built for the modern web. Chrome OS is an operating system that provides a fast, simple, and more secure computing experience for people who spend most of their time on the web. They are, respectively, built upon Chromium and Chromium OS open source projects. Together, Chrome and Chrome OS aim to move the web forward and to provide a unified browsing experience for your computer, phone and tablet.</p>
+                                </li>
+                                <li class="microsoft">
+                                    <strong class="sponsor">
+                                        <a href="//modern.ie" rel="external" title="Teste mais f&#225;cil no Internet Explorer | modern.IE" class="sponsors-general">Modern.IE</a>    
+                                    </strong>
+                                    <p class="about">Introducing modern.IE, a set of tools and resources from Microsoft to help you support modern and older versions of Internet Explorer. Download Virtual Machines for Windows, Mac and Linux. Test your site on different browsers and scan your site for common coding patterns that could cause compatibility issues. Spend less time testing, and more time building what’s next.</p>
+                                </li>                                                                    
                             </ul>
                         </div>
                         <div class="sponsors silver squares">
@@ -1154,6 +1179,8 @@
                                 <li><a href="//getupcloud.com/" rel="external" title="Getup - Grow in the cloud" class="get-up ir">Getup</a></li>                                
                                 <li><a href="//superplayer.fm/" rel="external" title="O Superplayer é a forma mais fácil e rápida de se encontrar a trilha sonora certa para cada momento do seu dia. Confira!" class="superplayer ir">Superplayer</a></li>
                                 <li><a href="//kinghost.com.br/" rel="external" title="KingHost: Hospedagem de Sites Linux e Windows" class="kinghost ir">KingHost</a></li>
+                                <li><a href="//publisoft.com.br/" rel="external" title="Publisoft" class="publisoft ir">Publisoft</a></li>
+                                <li><a href="//qi.edu.br//" rel="external" title="QI - Escolas e Faculdades" class="qi ir">QI</a></li>
                             </ul>
                         </div>                                               
                     </div>          				    
