--- a/index.html
+++ b/index.html
@@ -804,8 +804,13 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Marcel Duran &amp;&amp; Angus Croll</strong>
-                                            <em class="speak">A definir</em>                                            
+                                            <em class="speak">Performance as a Twitter feature &amp;&amp; Learning to fly - Twitter Flight and mixin</em>                                            
                                         </div>
+                                        <span class="expand ir ico-general">&nbsp;</span>                                            
+                                        <div class="about">
+                                            <p>A palestra de Marcel será sobre como a performance na Web deveria ser tratada como uma funcionalidade. Esta palestra exemplifica algumas maneiras de como fazer com que a performance, assim como qualquer outra feature em sua aplicação, quebre um build falhando um teste.</p>
+                                            <p>Já a palestra de Angus é a que segue: Quando fomos solicitados para desenvolver a nova infraestrutura JavaScript do twitter.com(o qual foi construído sob demanda) recebemos a oportunidade de colocar em prática algumas de nossas técnicas favoritas. Nesta palestra, Angus discutirá várias metodologias de re-uso do JavaScript e explicar por que a melhor escolha foram os mixins funcionais.</p>                                                                                        
+                                        </div>                                        
                                     </td>                                   
                                 </tr> 
                                 <tr>
@@ -813,7 +818,11 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Renato Mangini</strong>
-                                            <em class="speak">A definir</em>                                            
+                                            <em class="speak">Where modern front-end tooling has gone</em>
+                                        </div>
+                                        <span class="expand ir ico-general">&nbsp;</span>                                            
+                                        <div class="about">
+                                            <p>Desenvolver uma app moderna em uma empresa de verdade exige um conjunto bom de ferramentas. Em especial em front-end, por causa do enorme universo de frameworks e bibliotecas. Nesta apresentação vamos apresentar o Yeoman, um gentil trabalhador inglês disposto a ajudar na ingrata mas importante tarefa de conectar e mover as engrenagens que permitem à sua app brilhar.</p>                                                                                        
                                         </div>
                                     </td>                                   
                                 </tr>
@@ -924,8 +933,12 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Alexandre Gaigalas</strong>
-                                            <em class="speak">A definir</em>                                            
+                                            <em class="speak">API Sex</em>                                            
                                         </div>
+                                        <span class="expand ir ico-general">&nbsp;</span>
+                                        <div class="about">
+                                            <p>Como fazer uma boa API? Do que elas se alimentam? Como elas se reproduzem? Ao tratar software como pequenas criaturas baseadas em APIs, veremos suas linhagens, como elas evoluem, como selecioná-las e o que as torna eficientes.</p>
+                                        </div>                                        
                                     </td>                                   
                                 </tr>
                                 <tr>
@@ -966,7 +979,14 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Caridy Patino</strong>
-                                            <em class="speak">A definir</em>                                            
+                                            <em class="speak">NodeJS, the good, the bad and the ugly</em>                                            
+                                        </div>
+                                        <span class="expand ir ico-general">&nbsp;</span>
+                                        <div class="about">
+                                            <p>NodeJS é uma das tecnologias mais quentes da atualidade, com uma comunidade em constante crescimento. Uma vez que sua linguagem natural é o JavaScript, a linguagem que todos sabemos, mas sem as limitações impostas pelos browsers, esta tecnologia abre uma grande quantidade de oportunidades.</p> 
+                                            <p>Desde uma aplicação web até uma interface robótica, você pode construir praticamente qualquer coisa com ela, o que é uma das belezas do NodeJS!</p>
+                                            <p>Mas o fato de que você PODE fazer, não quer dizer DEVA. Para desenvolvedores NodeJS, o maior desafio é conhecer as limitações da plataforma para evitar falhas em algumas das armadilhas mais comuns.</p>
+                                            <p>Veremos algumas destas issues e também alguns guidelines para tirarmos o melhor proveito do NodeJS em diferentes cenários desde uma ferramenta simples, até frameworks complexos.</p>
                                         </div>
                                     </td>                                   
                                 </tr>
@@ -992,7 +1012,7 @@
                                         </div>
                                         <span class="expand ir ico-general">&nbsp;</span>
                                         <div class="about">
-                                            <p>Programas de computador são a coisa mais complicada que humanos são capases de fazer. Eles precisam ser perfeitos, o que é complicado para nós, já que humanos não são perfeitos!</p>
+                                            <p>Programas de computador são a coisa mais complicada que humanos são capazes de fazer. Eles precisam ser perfeitos, o que é complicado para nós, já que humanos não são perfeitos!</p>
                                             <p>Programar é considerado uma atividade mental, da cabeça...mas há muito trabalho para o corpo, para os instintos! Na verdade, são os instintos que devem nos dar o insight necessário para que resolvamos certos problemas!</p>
                                             <p>Mas instintos podem nos deixar confusos quando o assunto é estilo. Os sistemas em nossos cérebros é que nos faz vulneráveis às propagandas, e também, que influencia nosso estilo de programar.</p>
                                             <p>Esta palestra analisa sistematicamente o desenvolvimento de um estilo de programação que melhora especificamente a leitura de programas e código. Os exemplos serão dados em JavaScript, uma linguagem com um incomum grande número de partes ruins, mas os princípios são aplicáveis a qualquer linguagem de programação.</p>                                        </div>
@@ -1104,8 +1124,14 @@
                                     <strong class="sponsor">
                                         <a href="//developers.google.com/chrome/" rel="external" title="visite o site do Google Chrome &mdash; Google Developers" class="sponsors-general">Google</a>    
                                     </strong>
-                                    <p class="about">Google Inc. é uma multinacional Norte Americana especializada em produtos e serviços relacionados a internet. Esses serviços incluem busca, cloud computing, software e tecnologias de anuncios online. A maior parte do seu lucro é oriundo dos AdWords.</p>
-                                </li>                                
+                                    <p class="about">Chrome is a fast, simple, and secure web browser, built for the modern web. Chrome OS is an operating system that provides a fast, simple, and more secure computing experience for people who spend most of their time on the web. They are, respectively, built upon Chromium and Chromium OS open source projects. Together, Chrome and Chrome OS aim to move the web forward and to provide a unified browsing experience for your computer, phone and tablet.</p>
+                                </li>
+                                <li class="microsoft">
+                                    <strong class="sponsor">
+                                        <a href="//modern.ie" rel="external" title="Teste mais f&#225;cil no Internet Explorer | modern.IE" class="sponsors-general">Modern.IE</a>    
+                                    </strong>
+                                    <p class="about">Apresentando o modern.IE, um grupo de ferramentas e recursos criados pela Microsoft para ajudar você a manter versões modernas e antigas do Internet Explorer. Faça o download das máquinas virtuais para Windows, Mac e Linux! Faça o teste de seu site em diferentes navegadores e encontre padrões de código conhecidos por causar problemas de compatibilidade. Gaste menos tempo testando, e mais tempo construindo o que está por vir!</p>
+                                </li>                                                                
                             </ul>
                         </div>
                         <div class="sponsors silver squares">
@@ -1159,6 +1185,8 @@
                                 <li><a href="//getupcloud.com/" rel="external" title="Getup - Grow in the cloud" class="get-up ir">Getup</a></li>                                
                                 <li><a href="//superplayer.fm/" rel="external" title="O Superplayer é a forma mais fácil e rápida de se encontrar a trilha sonora certa para cada momento do seu dia. Confira!" class="superplayer ir">Superplayer</a></li>
                                 <li><a href="//kinghost.com.br/" rel="external" title="KingHost: Hospedagem de Sites Linux e Windows" class="kinghost ir">KingHost</a></li>
+                                <li><a href="//publisoft.com.br/" rel="external" title="Acesse o site da Publisoft" class="publisoft ir">Publisoft</a></li>
+                                <li><a href="//qi.edu.br//" rel="external" title="QI - Escolas e Faculdades" class="qi ir">QI</a></li>
                             </ul>
                         </div>                                                
                     </div>          				    
