Adding new supporters and info

--- a/en/index.html
+++ b/en/index.html
@@ -916,7 +916,14 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Josh Holmes</strong>
-                                            <em class="speak">TBA</em>                                            
+                                            <em class="speak">The Perf Doctor is In</em>                                            
+                                        </div>
+                                        <span class="expand ir ico-general">&nbsp;</span>
+                                        <div class="about">
+                                            <p>Building a high performance front end is a balancing act. You need to understand all the different moving parts and subsystems in the browser and how they interact with each other.</p>
+                                            <p>Small changes can significantly impact page and app load time, memory consumption, and processor use which has a huge impact on your user’s experience!</p>
+                                            <p>In this session, we will dive into the subsystems of the browser and learn to optimize performance on sites and in web apps.</p>
+                                            <p>We will also deep dive into the new performance analyzing tools available expose good and bad run-time patterns for your sites and web apps, and provide users with a fast and fluid experience.</p>
                                         </div>
                                     </td>                                   
                                 </tr>
@@ -1180,7 +1187,8 @@
                                 <li><a href="//superplayer.fm/" rel="external" title="O Superplayer é a forma mais fácil e rápida de se encontrar a trilha sonora certa para cada momento do seu dia. Confira!" class="superplayer ir">Superplayer</a></li>
                                 <li><a href="//kinghost.com.br/" rel="external" title="KingHost: Hospedagem de Sites Linux e Windows" class="kinghost ir">KingHost</a></li>
                                 <li><a href="//publisoft.com.br/" rel="external" title="Publisoft" class="publisoft ir">Publisoft</a></li>
-                                <li><a href="//qi.edu.br//" rel="external" title="QI - Escolas e Faculdades" class="qi ir">QI</a></li>
+                                <li class="last"><a href="//www.nyvra.net" rel="external" title="Nyvra Software - Produtos, Consultoria e Desenvolvimento para Plataformas M&oacute;veis - iOS e Android" class="ir nyvra">Nyvra</a></li>
+                                <li><a href="//qi.edu.br" rel="external" title="QI - Escolas e Faculdades" class="qi ir">QI</a></li>
                             </ul>
                         </div>                                               
                     </div>          				    
