--- a/index.html
+++ b/index.html
@@ -920,7 +920,14 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Josh Holmes</strong>
-                                            <em class="speak">A definir</em>                                            
+                                            <em class="speak">The Perf Doctor is In</em>                                            
+                                        </div>
+                                        <span class="expand ir ico-general">&nbsp;</span>
+                                        <div class="about">
+                                            <p>Construir um front-end de alta performance é um jogo de equilíbrio. Você precisa compreender todas as diferentes partes móveis e sub-sistemas que existem nos browsers e como elas interagem entre elas.</p>
+                                            <p>Pequenas alterações podem impactar significativamente no tempo de carregamento da página ou app, consumo de memória e uso de processamento, o que tem um impacto enorme na experiência do seu usuário!</p>
+                                            <p>Nesta apresentação, mergulharemos nos subsistemas dos navegadores e aprenderemos como otimizar a performance em sites e aplicações.</p>
+                                            <p>Nós também vamos nos aprofundar nas novas ferramentas de análise de performance disponíveis, explorar os bons e maus padrões run-time e oferecer uma experiência muito mais fluída e rápida para os usuários.</p>
                                         </div>
                                     </td>                                   
                                 </tr>
@@ -1186,7 +1193,8 @@
                                 <li><a href="//superplayer.fm/" rel="external" title="O Superplayer é a forma mais fácil e rápida de se encontrar a trilha sonora certa para cada momento do seu dia. Confira!" class="superplayer ir">Superplayer</a></li>
                                 <li><a href="//kinghost.com.br/" rel="external" title="KingHost: Hospedagem de Sites Linux e Windows" class="kinghost ir">KingHost</a></li>
                                 <li><a href="//publisoft.com.br/" rel="external" title="Acesse o site da Publisoft" class="publisoft ir">Publisoft</a></li>
-                                <li><a href="//qi.edu.br//" rel="external" title="QI - Escolas e Faculdades" class="qi ir">QI</a></li>
+                                <li class="last"><a href="//www.nyvra.net" rel="external" title="Nyvra Software - Produtos, Consultoria e Desenvolvimento para Plataformas M&oacute;veis - iOS e Android" class="ir nyvra">Nyvra</a></li>
+                                <li><a href="//qi.edu.br" rel="external" title="QI - Escolas e Faculdades" class="qi ir">QI</a></li>                                
                             </ul>
                         </div>                                                
                     </div>          				    
