new sponsor. Stoyan talk title

--- a/en/index.html
+++ b/en/index.html
@@ -1000,7 +1000,7 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Stoyan Stefanov</strong>
-                                            <em class="speak">TBA</em>                                            
+                                            <em class="speak">Reactive JavaScript</em>                                            
                                         </div>
                                     </td>                                   
                                 </tr>
@@ -1189,6 +1189,7 @@
                                 <li><a href="//publisoft.com.br/" rel="external" title="Publisoft" class="publisoft ir">Publisoft</a></li>
                                 <li class="last"><a href="//www.nyvra.net" rel="external" title="Nyvra Software - Produtos, Consultoria e Desenvolvimento para Plataformas M&oacute;veis - iOS e Android" class="ir nyvra">Nyvra</a></li>
                                 <li><a href="//qi.edu.br" rel="external" title="QI - Escolas e Faculdades" class="qi ir">QI</a></li>
+                                <li><a href="//www.computech.com.br" rel="external" title="Computech - Tecnologia ao seu alcance" class="computech ir">Computech</a></li>
                             </ul>
                         </div>                                               
                     </div>          				    
