--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@
                                     <td class="speaker">
                                         <div class="info-wrapper">
                                             <strong class="name">Stoyan Stefanov</strong>
-                                            <em class="speak">A definir</em>                                            
+                                            <em class="speak">Reactive JavaScript</em>                                            
                                         </div>
                                     </td>                                   
                                 </tr>
@@ -1194,7 +1194,8 @@
                                 <li><a href="//kinghost.com.br/" rel="external" title="KingHost: Hospedagem de Sites Linux e Windows" class="kinghost ir">KingHost</a></li>
                                 <li><a href="//publisoft.com.br/" rel="external" title="Acesse o site da Publisoft" class="publisoft ir">Publisoft</a></li>
                                 <li class="last"><a href="//www.nyvra.net" rel="external" title="Nyvra Software - Produtos, Consultoria e Desenvolvimento para Plataformas M&oacute;veis - iOS e Android" class="ir nyvra">Nyvra</a></li>
-                                <li><a href="//qi.edu.br" rel="external" title="QI - Escolas e Faculdades" class="qi ir">QI</a></li>                                
+                                <li><a href="//qi.edu.br" rel="external" title="QI - Escolas e Faculdades" class="qi ir">QI</a></li>
+                                <li><a href="//www.computech.com.br" rel="external" title="Computech - Tecnologia ao seu alcance" class="computech ir">Computech</a></li>                                
                             </ul>
                         </div>                                                
                     </div>          				    
