--- a/en/index.html
+++ b/en/index.html
@@ -1190,6 +1190,7 @@
                                 <li class="last"><a href="//www.nyvra.net" rel="external" title="Nyvra Software - Produtos, Consultoria e Desenvolvimento para Plataformas M&oacute;veis - iOS e Android" class="ir nyvra">Nyvra</a></li>
                                 <li><a href="//qi.edu.br" rel="external" title="QI - Escolas e Faculdades" class="qi ir">QI</a></li>
                                 <li><a href="//www.computech.com.br" rel="external" title="Computech - Tecnologia ao seu alcance" class="computech ir">Computech</a></li>
+                                <li><a href="//revistaw.com.br/" rel="external" title="revista W" class="revista-W ir">Revista W</a></li>
                             </ul>
                         </div>                                               
                     </div>          				    
