--- a/index.html
+++ b/index.html
@@ -1195,7 +1195,8 @@
                                 <li><a href="//publisoft.com.br/" rel="external" title="Acesse o site da Publisoft" class="publisoft ir">Publisoft</a></li>
                                 <li class="last"><a href="//www.nyvra.net" rel="external" title="Nyvra Software - Produtos, Consultoria e Desenvolvimento para Plataformas M&oacute;veis - iOS e Android" class="ir nyvra">Nyvra</a></li>
                                 <li><a href="//qi.edu.br" rel="external" title="QI - Escolas e Faculdades" class="qi ir">QI</a></li>
-                                <li><a href="//www.computech.com.br" rel="external" title="Computech - Tecnologia ao seu alcance" class="computech ir">Computech</a></li>                                
+                                <li><a href="//www.computech.com.br" rel="external" title="Computech - Tecnologia ao seu alcance" class="computech ir">Computech</a></li>
+                                <li><a href="//revistaw.com.br/" rel="external" title="Acesse o site da revista W" class="revista-W ir">Revista W</a></li>                                
                             </ul>
                         </div>                                                
                     </div>          				    
