--- a/en/index.html
+++ b/en/index.html
@@ -89,6 +89,13 @@
 			    			<em class="company">PAYPAL</em>
 			    		</div>
 	    			</div>
+                    <div id="jsLiveVideo" class="live-modal visuallyhidden">
+                        <h2 class="title">LIVE</h2><button class="close ir" title="close the video">Close the video</button>
+                        <p class="disclaimer"><strong>BrazilJS already started!</strong> See live the largest javascript conference in the universe!</p>
+                        <p class="disclaimer">Unseen content, renowed speakers, without leaving your home. :)</p>
+                        <a href="#" class="watch" rel="external" title="watch live in youtube!"><span class="message">watch in youtube</span></a>
+                        <iframe width="854" height="510" src="" frameborder="0" allowfullscreen></iframe> 
+                    </div>	    			
 	    		</header>	    		
 				<div class="social-wrapper">
 					<span class="social-bg">&nbsp;</span>
