--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
 			    			<em class="company">PAYPAL</em>
 			    		</div>
 	    			</div>
+	    			<div id="jsLiveVideo" class="live-modal visuallyhidden">
+	    			    <h2 class="title">AO VIVO</h2><button class="close ir" title="fechar o vídeo">Fechar o video</button>
+	    			    <p class="disclaimer"><strong>A BrazilJS já começou!</strong> Acompanhe ao vivo a maior conferência de javascript do universo!</p>
+	    			    <p class="disclaimer">Conteúdo inédito e palestrantes renomados, sem sair de casa. :)</p>
+	    			    <a href="#" class="watch" title="assista ao vivo no youtube!"><span class="message">assistir no youtube</span></a>
+	    			    <iframe width="854" height="510" src="" frameborder="0" allowfullscreen></iframe> 
+	    			</div>
 	    		</header>	    		
 				<div class="social-wrapper">
 					<span class="social-bg">&nbsp;</span>
