Updating colors and images

--- a/index.html
+++ b/index.html
@@ -1284,10 +1284,10 @@
                                     <a href="https://www.heroku.com" rel="external" title="saiba mais sobre a Heroku" class="sponsor heroku"><span class="heroku sponsors-general">Heroku</span></a>
                                 </li>
                                 <li>
-                                    <a href="mailto:contato@braziljs.com.br" title="Quer ser um patrocinador? Fale conosco!" class="sponsor join-us">&nbsp;</a>
+                                    <a href="mailto:contato@braziljs.com.br" title="Quer ser um patrocinador? Fale conosco!" class="sponsor join-us">Seja também um patrocinador do nosso evento!</a>
                                 </li>                                
                                 <li>
-                                    <a href="mailto:contato@braziljs.com.br" title="Quer ser um patrocinador? Fale conosco!" class="sponsor join-us">&nbsp;</a>                                    
+                                    <a href="mailto:contato@braziljs.com.br" title="Quer ser um patrocinador? Fale conosco!" class="sponsor join-us">Seja também um patrocinador do nosso evento!</a>                                    
                                 </li>                                
                             </ul>
                         </div>                        
