--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                     <span class="navigation-container__hook">manifesto</span>
                 </a>
             </li>
-            <!-- li class="default-text navigation-container__item">
+            <li class="default-text navigation-container__item">
                 <a href="#patrocinadores" class="navigation-container__anchor">
                     <span class="navigation-container__hook">patrocinadores</span>
                 </a>
-            </li -->
+            </li>
             <li class="default-text navigation-container__item">
                 <a href="#curadores" class="navigation-container__anchor">
                     <span class="navigation-container__hook">curadores</span>
