--- a/en/index.html
+++ b/en/index.html
@@ -83,11 +83,11 @@
                     <span class="navigation-container__hook">manifest</span>
                 </a>
             </li>
-            <!-- li class="default-text navigation-container__item">
+            <li class="default-text navigation-container__item">
                 <a href="#sponsors" class="navigation-container__anchor">
                     <span class="navigation-container__hook">sponsors</span>
                 </a>
-            </li -->
+            </li>
             <li class="default-text navigation-container__item">
                 <a href="#curators" class="navigation-container__anchor">
                     <span class="navigation-container__hook">curators</span>
