new sponsor, ticket price

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="row">
             <div class="price-container">
                 <div class="col-4-12">
-                    <strong class="default-text default-text--current-price">R$ 200,00</strong>
+                    <strong class="default-text default-text--current-price">R$ 240,00</strong>
                 </div>
                 <div class="col-4-12 call-to-action-container">
                     <a href="http://www.eventick.com.br/braziljs-2014" class="default-link default-link--call-to-action">Compre Agora!</a>
@@ -623,6 +623,17 @@
         <div class="row manifest-title-container">
             <h2 id="patrocinadores" class="section-title section-title--sponsors">patrocinadores</h2>
         </div>
+        <h3 class="default-text default-text--sponsors">Patrocínio Adamantium:</h3>
+        <ul class="sponsors-list clearfix">
+            <li>
+                <a href="http://www.w3c.br/" class="sponsor-container sponsor-container--w3c col-6-12">
+                    <div class="sponsor-logo-container">
+                        <img src="../img/sponsors/w3c.svg" alt="logo W3C" />
+                    </div>
+                    <p class="default-paragraph default-paragraph--sponsors"> W3C Brasil  O Consórcio World Wide Web (W3C) é um consórcio internacional no qual organizações filiadas, uma equipe em tempo integral e o público trabalham juntos para desenvolver padrões para a Web. Liderado pelo inventor da web Tim Berners-Lee e o CEO Jeffrey Jaffe, o W3C tem como missão Conduzir a World Wide Web para que atinja todo seu potencial, desenvolvendo protocolos e diretrizes que garantam seu crescimento de longo prazo. Para mais informações, contate-nos.</p>
+                </a>
+            </li>
+        </ul>
         <h3 class="default-text default-text--sponsors">Patrocínio Prata:</h3>
         <ul class="sponsors-list clearfix">
             <a href="http://www.booking.com" class="sponsor-container sponsor-container--bronze sponsor-container--booking col-3-12">
