--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
 
 </head>
 <body data-language="pt_BR" class="pt_BR">
-<!--iframe src="/offline.html" style="position:absolute;top:-999em;visibility:hidden"></iframe-->
   <div class="page-wrapper">
     <!-- HEADER -->
 <main class="section header-container" role="main">
@@ -670,6 +669,14 @@
                     <p class="default-paragraph default-paragraph--sponsors">A Liferay é líder mundial em soluções para portais horizontais de colaboração social de código aberto. Reconhecida pelo Gartner em seu Quadrante Mágico como líder, possui escritórios físicos em mais de 14 países ao redor do mundo. No Brasil os escritórios estão em São Paulo e Recife, responsáveis por atender toda a América Latina.</p>
                 </a>
             </li>
+            <li>
+                <a href="https://www.liferay.com/pt/" class="sponsor-container sponsor-container--gold sponsor-container--liferay col-4-12">
+                    <div class="sponsor-logo-container">
+                        <img src="../img/sponsors/globo.com.svg" alt="logo Globo.com" />
+                    </div>
+                    <p class="default-paragraph default-paragraph--sponsors">Portal de conteúdo brasileiro, líder em Notícias, Esportes e Entretenimento. Acompanhe todos os lançamentos por aqui.</p>
+                </a>
+            </li>
         </ul>
         <h3 class="default-text default-text--sponsors">Patrocínio Prata:</h3>
         <ul class="sponsors-list clearfix">
@@ -707,6 +714,19 @@
                 <a class="default-link default-link--contact-us" href="mailto:contato@braziljs.com.br">Entre em contato!</a>
             
         </div>
+        <h3 class="default-text default-text--sponsors">Apoio:</h3>
+        <ul class="sponsors-list clearfix">
+            <li class="suporters-container">
+                <a href="http://marimbondo.me/">
+                    <img alt="Logo Marimbondo" src="img/sponsors/marimbondo.svg" />
+                </a>
+            </li>
+            <li class="suporters-container">
+                <a href="http://www.ecore.com.br/portal/pt/">
+                    <img alt="Logo E-core" src="img/sponsors/e-core.png" />
+                </a>
+            </li>
+        </ul>
     </div>
 </section>
 <!-- /SPONSORS -->
