--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.liferay.com/pt/" class="sponsor-container sponsor-container--gold sponsor-container--liferay col-4-12">
+                <a href="http://globo.com" class="sponsor-container sponsor-container--gold sponsor-container--liferay col-4-12">
                     <div class="sponsor-logo-container">
                         <img src="../img/sponsors/globo.com.svg" alt="logo Globo.com" />
                     </div>
